--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "LiveTerm",
+  "title": "AstroSecure",
   "name": "John Doe",
   "ascii": "liveterm",
   "social": {
@@ -8,7 +8,7 @@
     "linkedin": "linkedin"
   },
   "email": "contact@email.com",
-  "ps1_hostname": "liveterm",
+  "ps1_hostname": "AstroSecure",
   "ps1_username": "visitor",
   "repo": "https://github.com/Cveinnt/LiveTerm",
   "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
