--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
-  "title": "AstroSecure",
+  "title": "Terminal",
   "name": "John Doe",
   "ascii": "liveterm",
   "social": {
